--- a/client.properties
+++ b/client.properties
@@ -1,2 +1,2 @@
-happyemail = Hello Happy User, <br><br>We are glad that today is a good day for you, keep it up and spread the joy! Lots of love, The Happy Team.
-sademail = Hello Happy User, We are sorry that today isn't going so good for you, find someone to talk to. Talking is great, believe us it helps. We hope you feel better soon! Lots of love, The Happy Team. 
+happyemail = Hello Happy User,<br><br>We are glad that today is a good day for you, keep it up and spread the joy!<br><br>Lots of love,<br><br>The Happy Team.
+sademail = Hello Happy User,<br><br>We are sorry that today isn't going so good for you, find someone to talk to. Talking is great, believe us it helps. We hope you feel better soon!<br><br>Lots of love,<br><br>The Happy Team. 
