--- a/client.properties
+++ b/client.properties
@@ -1,2 +1,2 @@
-happyemail = Hi ${happyuser},<br><br>We are glad that today is a good day for you, keep it up and spread the joy!<br><br>Lots of love,<br><br>The Happy Team.
-sademail = Hello ${happyuser},<br><br>We are sorry that today isn't going so good for you, find someone to talk to. Talking is great, believe us it helps. We hope you feel better soon!<br><br>Lots of love,<br><br>The Happy Team. 
+happyemail = Hi happynamereplace,<br><br>We are glad that today is a good day for you, keep it up and spread the joy!<br><br>Lots of love,<br><br>The Happy Team.
+sademail = Hello happynamereplace,<br><br>We are sorry that today isn't going so good for you, find someone to talk to. Talking is great, believe us it helps. We hope you feel better soon!<br><br>Lots of love,<br><br>The Happy Team. 
